Cambios en la estrcutura del proyecto, division de funcionalidades, token funcional, cifrados de datos y Seguridad Adicional hecho
