# src/config/OpenApi/swagger.yaml
@@ -1,11 +1,17 @@
 openapi: 3.0.0
 info:
   title: API de Usuarios
-  description: Documentación funcional con Swagger UI
   version: 1.0.0
-
 servers:
-  - url: http://localhost:3000
+  - url: https://localhost:3000
+
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
 
 paths:
   /ping:
@@ -258,7 +264,7 @@ paths:
                     type: string
                     example: "+521111122233"
 
-  /usuarios/login:
+  /auth/login:
     post:
       summary: Login de usuario
       requestBody:
@@ -325,6 +331,18 @@ paths:
                     type: string
               example:
                 error: "Contraseña incorrecta"
+        '403':
+          description: Cuenta bloqueada temporalmente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: "Mensaje indicando hasta cuándo la cuenta está bloqueada"
+              example:
+                error: "Cuenta bloqueada hasta {fecha_hora_dinamica}"
         '404':
           description: Usuario no encontrado
           content:
@@ -337,7 +355,7 @@ paths:
               example:
                 error: "Usuario no encontrado"
 
-  /usuarios/solicitar-reset:
+  /recuperar/solicitar-reset:
     post:
       summary: Solicitar código para restablecer contraseña
       description: Genera un código de verificación temporal que será enviado al correo del usuario.
@@ -392,7 +410,7 @@ paths:
                     type: string
                     example: "Usuario no encontrado"
 
-  /usuarios/reset-con-codigo:
+  /recuperar/reset-con-codigo:
     post:
       summary: Restablecer contraseña con código
       description: Valida el código y actualiza la contraseña del usuario.
@@ -453,3 +471,68 @@ paths:
                   error:
                     type: string
                     example: "Usuario no encontrado"
+  /admin:
+    get:
+      summary: Acceso solo para administradores
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Acceso concedido al admin
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  mensaje:
+                    type: string
+                    example: "Hola Admin"
+                  usuario:
+                    type: object
+                    example:
+                      id: 1
+                      correo: "admin@mail.com"
+                      rol: "admin"
+        '403':
+          description: Acceso denegado (no es admin)
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Acceso denegado"
+
+  /user:
+    get:
+      summary: Acceso para usuarios y administradores
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Acceso concedido
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  mensaje:
+                    type: string
+                    example: "Hola Usuario"
+                  usuario:
+                    type: object
+                    example:
+                      id: 2
+                      correo: "user@mail.com"
+                      rol: "user"
+        '403':
+          description: Acceso denegado (sin rol válido)
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Acceso denegado"
