# src/interfaces/routes/loginRoutes.js
@@ -1,0 +1,12 @@
+const express = require('express');
+const router = express.Router();
+const {  loginUsuario,generarSecret2FA } = require('../controllers/authController');
+
+
+
+router.post('/auth/login', loginUsuario);
+
+
+
+
+module.exports = router;
